--- a/RIP Nipsey.ipynb
+++ b/RIP Nipsey.ipynb
@@ -1796,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +1805,7 @@
        "378"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1816,30 +1816,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "words = open(r\"C:\\Users\\modea\\Documents\\# - UNIVERSITY\\Spring 2020\\ENGI E1006 - Introduction to Computing for Engineering and Applied Scientists\\Final\\ez2294-final\\words.txt\",\"w+\")"
+    "words = open(r\"C:\\Users\\modea\\Documents\\# - UNIVERSITY\\Spring 2020\\ENGI E1006 - Introduction to Computing for Engineering and Applied Scientists\\Final\\ez2294-final\\words.txt\",\"w+\", encoding = \"utf-8\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'decode'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-82-9ac691d4d858>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mallLyrics\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mwords\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'utf-8'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'cp850'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'replace'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'cp850'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'decode'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "count = 0\n",
     "for i in allLyrics:\n",
@@ -1848,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
