small backend fixes

--- a/RIP Nipsey - LIST.ipynb
+++ b/RIP Nipsey - LIST.ipynb
@@ -1388,6 +1388,298 @@
       "Searching for \"Ballin'\" by Mustard & Roddy Ricch...\n",
       "Done.\n",
       "Searching for \"China\" by Anuel AA, Daddy Yankee, Karol G, Ozuna & J Balvin...\n",
+      "Done.\n",
+      "Searching for \"Prayed For You\" by Matt Stell...\n",
+      "Done.\n",
+      "Searching for \"Motivation\" by Normani...\n",
+      "Done.\n",
+      "Searching for \"223's\" by YNW Melly & 9lokknine...\n",
+      "Done.\n",
+      "Searching for \"A Thousand Bad Times\" by Post Malone...\n",
+      "Done.\n",
+      "Searching for \"Heat\" by Chris Brown Featuring Gunna...\n",
+      "Done.\n",
+      "Searching for \"Even Though I'm Leaving\" by Luke Combs...\n",
+      "Done.\n",
+      "Searching for \"Lalala\" by Y2K & bbno$...\n",
+      "Done.\n",
+      "Searching for \"Otro Trago\" by Sech, Darell, Nicky Jam, Ozuna & Anuel AA...\n",
+      "Done.\n",
+      "Searching for \"Southbound\" by Carrie Underwood...\n",
+      "Done.\n",
+      "Searching for \"The Ones That Didn't Make It Back Home\" by Justin Moore...\n",
+      "Done.\n",
+      "Searching for \"Callaita\" by Bad Bunny & Tainy...\n",
+      "Done.\n",
+      "Searching for \"Love You Too Late\" by Cole Swindell...\n",
+      "Done.\n",
+      "Searching for \"Bad Bad Bad\" by Young Thug Featuring Lil Baby...\n",
+      "Done.\n",
+      "Searching for \"Staring At The Sun\" by Post Malone Featuring SZA...\n",
+      "Done.\n",
+      "Searching for \"I'm Gonna Be\" by Post Malone...\n",
+      "Done.\n",
+      "Searching for \"One Man Band\" by Old Dominion...\n",
+      "Done.\n",
+      "Searching for \"No Me Conoce\" by Jhay Cortez, J Balvin & Bad Bunny...\n",
+      "Done.\n",
+      "Searching for \"Good Vibes\" by Chris Janson...\n",
+      "Done.\n",
+      "Searching for \"Behind Barz\" by Drake...\n",
+      "Done.\n",
+      "Searching for \"Mood Swings\" by A Boogie Wit da Hoodie...\n",
+      "Done.\n",
+      "Searching for \"All To Myself\" by Dan + Shay...\n",
+      "Done.\n",
+      "Searching for \"Allergic\" by Post Malone...\n",
+      "Done.\n",
+      "Searching for \"Queen Of Mean\" by Sarah Jeffery...\n",
+      "Done.\n",
+      "Searching for \"F.N\" by Lil Tjay...\n",
+      "Done.\n",
+      "Searching for \"Baby Sitter\" by DaBaby Featuring Offset...\n",
+      "Done.\n",
+      "Searching for \"Right Back\" by Khalid Featuring A Boogie Wit da Hoodie...\n",
+      "Done.\n",
+      "Searching for \"Self Control\" by YoungBoy Never Broke Again...\n",
+      "Done.\n",
+      "Searching for \"Every Little Thing\" by Russell Dickerson...\n",
+      "Done.\n",
+      "Searching for \"Did It Again\" by Lil Tecca...\n",
+      "Done.\n",
+      "Searching for \"Hate Me\" by Ellie Goulding & Juice WRLD...\n",
+      "Done.\n",
+      "Searching for \"What Happens In A Small Town\" by Brantley Gilbert + Lindsay Ell...\n",
+      "Done.\n",
+      "Searching for \"Tip Of My Tongue\" by Kenny Chesney...\n",
+      "Done.\n",
+      "Searching for \"Slide Away\" by Miley Cyrus...\n",
+      "Done.\n",
+      "Searching for \"Press\" by Cardi B...\n",
+      "Done.\n",
+      "Searching for \"Hot Girl Bummer\" by blackbear...\n",
+      "Done.\n",
+      "Searching for \"Rearview Town\" by Jason Aldean...\n",
+      "Done.\n",
+      "Searching for \"It's You\" by Ali Gatie...\n",
+      "Done.\n",
+      "Searching for \"Playing Games\" by Summer Walker...\n",
+      "Done.\n",
+      "Searching for \"Shameless\" by Camila Cabello...\n",
+      "Done.\n",
+      "Searching for \"What If I Never Get Over You\" by Lady Antebellum...\n",
+      "Done.\n",
+      "Searching for \"1, 2 Many\" by Luke Combs & Brooks & Dunn...\n",
+      "Done.\n",
+      "Searching for \"Wish Wish\" by DJ Khaled Featuring Cardi B & 21 Savage...\n",
+      "Done.\n",
+      "Searching for \"We Were\" by Keith Urban...\n",
+      "Done.\n",
+      "Searching for \"Remember You Young\" by Thomas Rhett...\n",
+      "Done.\n",
+      "Searching for \"Someone You Loved\" by Lewis Capaldi...\n",
+      "Done.\n",
+      "Searching for \"Truth Hurts\" by Lizzo...\n",
+      "Done.\n",
+      "Searching for \"Senorita\" by Shawn Mendes & Camila Cabello...\n",
+      "Done.\n",
+      "Searching for \"Circles\" by Post Malone...\n",
+      "Done.\n",
+      "Searching for \"No Guidance\" by Chris Brown Featuring Drake...\n",
+      "Done.\n",
+      "Searching for \"Panini\" by Lil Nas X...\n",
+      "Done.\n",
+      "Searching for \"HIGHEST IN THE ROOM\" by Travis Scott...\n",
+      "Done.\n",
+      "Searching for \"Ran$om\" by Lil Tecca...\n",
+      "Done.\n",
+      "Searching for \"Bad Guy\" by Billie Eilish...\n",
+      "Done.\n",
+      "Searching for \"10,000 Hours\" by Dan + Shay & Justin Bieber...\n",
+      "Done.\n",
+      "Searching for \"Memories\" by Maroon 5...\n",
+      "Done.\n",
+      "Searching for \"Bandit\" by Juice WRLD & YoungBoy Never Broke Again...\n",
+      "Done.\n",
+      "Searching for \"Beautiful People\" by Ed Sheeran Featuring Khalid...\n",
+      "Done.\n",
+      "Searching for \"Good As Hell\" by Lizzo...\n",
+      "Done.\n",
+      "Searching for \"Lose You To Love Me\" by Selena Gomez...\n",
+      "Done.\n",
+      "Searching for \"I Don't Care\" by Ed Sheeran & Justin Bieber...\n",
+      "Done.\n",
+      "Searching for \"Goodbyes\" by Post Malone Featuring Young Thug...\n",
+      "Done.\n",
+      "Searching for \"Old Town Road\" by Lil Nas X Featuring Billy Ray Cyrus...\n",
+      "Done.\n",
+      "Searching for \"Trampoline\" by SHAED...\n",
+      "Done.\n",
+      "Searching for \"Only Human\" by Jonas Brothers...\n",
+      "Done.\n",
+      "Searching for \"Sunflower (Spider-Man: Into The Spider-Verse)\" by Post Malone & Swae Lee...\n",
+      "Done.\n",
+      "Searching for \"Talk\" by Khalid...\n",
+      "Done.\n",
+      "Searching for \"Sucker\" by Jonas Brothers...\n",
+      "Done.\n",
+      "Searching for \"On Chill\" by Wale Featuring Jeremih...\n",
+      "Done.\n",
+      "Searching for \"Money In The Grave\" by Drake Featuring Rick Ross...\n",
+      "Done.\n",
+      "Searching for \"Playing Games\" by Summer Walker...\n",
+      "Done.\n",
+      "Searching for \"Ballin'\" by Mustard & Roddy Ricch...\n",
+      "Done.\n",
+      "Searching for \"Suge\" by DaBaby...\n",
+      "Done.\n",
+      "Searching for \"How Do You Sleep?\" by Sam Smith...\n",
+      "Done.\n",
+      "Searching for \"Baby\" by Lil Baby & DaBaby...\n",
+      "Done.\n",
+      "Searching for \"Hot\" by Young Thug Featuring Gunna...\n",
+      "Done.\n",
+      "Searching for \"One Man Band\" by Old Dominion...\n",
+      "Done.\n",
+      "Searching for \"Dancing With A Stranger\" by Sam Smith & Normani...\n",
+      "Done.\n",
+      "Searching for \"Even Though I'm Leaving\" by Luke Combs...\n",
+      "Done.\n",
+      "Searching for \"Hot Girl Summer\" by Megan Thee Stallion, Nicki Minaj & Ty Dolla $ign...\n",
+      "Done.\n",
+      "Searching for \"One Thing Right\" by Marshmello & Kane Brown...\n",
+      "Done.\n",
+      "Searching for \"You Need To Calm Down\" by Taylor Swift...\n",
+      "Done.\n",
+      "Searching for \"Lover\" by Taylor Swift...\n",
+      "Done.\n",
+      "Searching for \"Camelot\" by NLE Choppa...\n",
+      "Done.\n",
+      "Searching for \"My Type\" by Saweetie...\n",
+      "Done.\n",
+      "Searching for \"Prayed For You\" by Matt Stell...\n",
+      "Done.\n",
+      "Searching for \"Time\" by NF...\n",
+      "Done.\n",
+      "Searching for \"Heat\" by Chris Brown Featuring Gunna...\n",
+      "Done.\n",
+      "Searching for \"Graveyard\" by Halsey...\n",
+      "Done.\n",
+      "Searching for \"223's\" by YNW Melly & 9lokknine...\n",
+      "Done.\n",
+      "Searching for \"Wow.\" by Post Malone...\n",
+      "Done.\n",
+      "Searching for \"Lonely Child\" by YoungBoy Never Broke Again...\n",
+      "Done.\n",
+      "Searching for \"Good Vibes\" by Chris Janson...\n",
+      "Done.\n",
+      "Searching for \"Love You Too Late\" by Cole Swindell...\n",
+      "Done.\n",
+      "Searching for \"Take What You Want\" by Post Malone Featuring Ozzy Osbourne & Travis Scott...\n",
+      "Done.\n",
+      "Searching for \"Dance Monkey\" by Tones And I...\n",
+      "Done.\n",
+      "Searching for \"Liar\" by Camila Cabello...\n",
+      "Done.\n",
+      "Searching for \"The Git Up\" by Blanco Brown...\n",
+      "Done.\n",
+      "Searching for \"I Don't Know About You\" by Chris Lane...\n",
+      "Done.\n",
+      "Searching for \"BOP\" by DaBaby...\n",
+      "Done.\n",
+      "Searching for \"Hot Girl Bummer\" by blackbear...\n",
+      "Done.\n",
+      "Searching for \"VIBEZ\" by DaBaby...\n",
+      "Done.\n",
+      "Searching for \"Make No Sense\" by YoungBoy Never Broke Again...\n",
+      "Done.\n",
+      "Searching for \"Baby Sitter\" by DaBaby Featuring Offset...\n",
+      "Done.\n",
+      "Searching for \"Cash Shit\" by Megan Thee Stallion Featuring DaBaby...\n",
+      "Done.\n",
+      "Searching for \"Every Little Thing\" by Russell Dickerson...\n",
+      "Done.\n",
+      "Searching for \"Self Control\" by YoungBoy Never Broke Again...\n",
+      "Done.\n",
+      "Searching for \"F.N\" by Lil Tjay...\n",
+      "Done.\n",
+      "Searching for \"The Bones\" by Maren Morris...\n",
+      "Done.\n",
+      "Searching for \"Enemies\" by Post Malone Featuring DaBaby...\n",
+      "Done.\n",
+      "Searching for \"Lights Up\" by Harry Styles...\n",
+      "Done.\n",
+      "Searching for \"INTRO\" by DaBaby...\n",
+      "Done.\n",
+      "Searching for \"What Happens In A Small Town\" by Brantley Gilbert + Lindsay Ell...\n",
+      "Done.\n",
+      "Searching for \"Hate Me\" by Ellie Goulding & Juice WRLD...\n",
+      "Done.\n",
+      "Searching for \"All Dat\" by Moneybagg Yo X Megan Thee Stallion...\n",
+      "Done.\n",
+      "Searching for \"China\" by Anuel AA, Daddy Yankee, Karol G, Ozuna & J Balvin...\n",
+      "Done.\n",
+      "Searching for \"Come Thru\" by Summer Walker & Usher...\n",
+      "Done.\n",
+      "Searching for \"Living\" by Dierks Bentley...\n",
+      "Done.\n",
+      "Searching for \"Tip Of My Tongue\" by Kenny Chesney...\n",
+      "Done.\n",
+      "Searching for \"Motivation\" by Normani...\n",
+      "Done.\n",
+      "Searching for \"Make It Right\" by BTS Featuring Lauv...\n",
+      "Done.\n",
+      "Searching for \"Leave Em Alone\" by Layton Greene, Lil Baby, City Girls & PnB Rock...\n",
+      "Done.\n",
+      "Searching for \"Hot Now\" by YoungBoy Never Broke Again...\n",
+      "Done.\n",
+      "Searching for \"Rich As Hell\" by YoungBoy Never Broke Again...\n",
+      "Done.\n",
+      "Searching for \"Remember You Young\" by Thomas Rhett...\n",
+      "Done.\n",
+      "Searching for \"We Were\" by Keith Urban...\n",
+      "Done.\n",
+      "Searching for \"Otro Trago\" by Sech, Darell, Nicky Jam, Ozuna & Anuel AA...\n",
+      "Done.\n",
+      "Searching for \"Kinfolks\" by Sam Hunt...\n",
+      "Done.\n",
+      "Searching for \"Lalala\" by Y2K & bbno$...\n",
+      "Done.\n",
+      "Searching for \"Higher Love\" by Kygo X Whitney Houston...\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n",
+      "Searching for \"In Control\" by YoungBoy Never Broke Again...\n",
+      "Done.\n",
+      "Searching for \"Heartache Medication\" by Jon Pardi...\n",
+      "Done.\n",
+      "Searching for \"Hot Shower\" by Chance The Rapper Featuring MadeinTYO & DaBaby...\n",
+      "Done.\n",
+      "Searching for \"Callaita\" by Bad Bunny & Tainy...\n",
+      "Done.\n",
+      "Searching for \"Nice To Meet Ya\" by Niall Horan...\n",
+      "Done.\n",
+      "Searching for \"Don't Call Me Angel (Charlie's Angels)\" by Ariana Grande, Miley Cyrus & Lana Del Rey...\n",
+      "Done.\n",
+      "Searching for \"Carter Son\" by YoungBoy Never Broke Again...\n",
+      "Done.\n",
+      "Searching for \"La Cancion\" by J Balvin & Bad Bunny...\n",
+      "Done.\n",
+      "Searching for \"What If I Never Get Over You\" by Lady Antebellum...\n",
+      "Done.\n",
+      "Searching for \"I'll Kill You\" by Summer Walker Featuring Jhene Aiko...\n",
+      "Done.\n",
+      "Searching for \"TOES\" by DaBaby Featuring Lil Baby & Moneybagg Yo...\n",
+      "Done.\n",
+      "Searching for \"Somebody\" by Internet Money, Lil Tecca & A Boogie Wit da Hoodie...\n",
+      "Done.\n",
+      "Searching for \"DHL\" by Frank Ocean...\n",
+      "Done.\n",
+      "Searching for \"Boyfriend\" by Ariana Grande & Social House...\n",
       "Done.\n"
      ]
     }
